<resources>
    <string name="app_name">SafeWay</string>
    <string name="safeway">SafeWay</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_login_ro">Autentificare</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_email_ro">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_ro">Parolă</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_confirm_password_ro">Confirmați parola</string>
    <string name="action_sign_in">LOG IN</string>
    <string name="action_sign_in_ro">AUTENTIFICARE</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in_short_ro">Înregistrare</string>
    <string name="welcome">"Welcome !"</string>
    <string name="welcome_ro">"Bine ați venit !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_username_ro">Numele de utilizator nu este valid</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_password_ro">Parola trebuie să aibă cel puțin 5 caractere</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_failed_ro">"Autentificare eșuată"</string>
    <string name="bg_image">bg-image</string>
    <string name="welcome_back">WELCOME BACK</string>
    <string name="welcome_back_ro">Bine ați revenit!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_ro">Ați uitat parola?</string>
    <string name="remember_me">Remember me</string>
    <string name="remember_me_ro">Ține-mă conectat</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_ro">ÎNREGISTREAZĂ-TE</string>
    <string name="name">Name</string>
    <string name="name_ro">Nume</string>
    <string name="signup_title">HELLO THERE</string>
    <string name="signup_title_ro">SALUT</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_settings_ro">SettingsActivity</string>
    <string name="drive_safely">Drive Safely!</string>
    <string name="drive_safely_ro">Condu în siguranță!</string>
    <string name="we_ve_got_you_covered">We\'ve got you covered behind the scenes.</string>
    <string name="we_ve_got_you_covered_ro">Avem grijă de tine din spatele scenelor.</string>
    <string name="start_driving_safer">Start driving safer</string>
    <string name="start_driving_safer_ro">Începe să conduci mai în siguranță</string>
    <string name="messages_header">Messages</string>
    <string name="messages_header_ro">Mesaje</string>
    <string name="sync_header">Sync</string>
    <string name="sync_header_ro">Sincronizare</string>
    <string name="signature_title">Your signature</string>
    <string name="signature_title_ro">Semnătura dumneavoastră</string>
    <string name="reply_title">Default reply action</string>
    <string name="reply_title_ro">Răspuns implicit</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="sync_title_ro">Sincronizează emailul periodic</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_title_ro">Descărcați atașamentele primite</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_on_ro">Descărcați automat atașamentele din emailurile primite</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="attachment_summary_off_ro">Descărcați doar atașamentele solicitate manual</string>
    <string name="user_email">marc.vana@yahoo.com</string>
    <string name="top_achievements">Top Achievements</string>
    <string name="top_achievements_ro">Cele mai bune realizări</string>
    <string name="title_activity_primary">PrimaryActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="first_fragment_label_ro">Primul fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="second_fragment_label_ro">Al doilea fragment</string>
    <string name="next">Next</string>
    <string name="next_ro">Următorul</string>
    <string name="previous">Previous</string>
    <string name="previous_ro">Anterior</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="team_dev">Developed by <b>ITnovation</b></string>
    <string name="team_dev_ro">Dezvoltat de <b>ITnovation</b></string>
    <string name="settings">Settings</string>
    <string name="settings_ro">Setări</string>
    <string name="audio">Audio</string>
    <string name="audio_ro">Audio</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_ro">Notificări</string>
    <string name="preferences">Preferences</string>
    <string name="preferences_ro">Preferințe</string>
    <string name="language">Language</string>
    <string name="language_ro">Limbă</string>
    <string name="about">About</string>
    <string name="about_ro">Despre</string>
    <string name="back_arrow">back_arrow</string>
    <string name="username">Marc-Aurelius Vana</string>
    <string name="english">English</string>
    <string name="english_ro">Engleză</string>
    <string name="romanian">Română</string>
    <string name="about_project">About the project</string>
    <string name="about_project_ro">Despre proiect</string>
    <string name="about_paragraph_1">SafeWay is a comprehensive safety system designed to help you drive safer, protecting both you and others. The system incorporates a large number of various functionalities that will increase your safety while driving. It is made using state-of-the-art technologies, such as artificial intelligence. SafeWay brings traffic safety to a whole new level. It is very well optimized, the risks being 0. The system does not control your vehicle! This way, there will be no errors or malfunctions that will endanger your life or the lives of those around you. Trust is an important factor that should not be lacking in this world.</string>
    <string name="about_paragraph_1_ro">SafeWay este un sistem amplu de siguranță conceput pentru a vă ajuta să conduceți mai sigur, protejându-vă atât pe dumneavoastră cât și pe cei din jur. Sistemul încorporează un număr mare de diferite funcționalități care vă vor spori siguranța în timp ce conduceți. Este realizat folosind tehnologii de ultimă generație, cum ar fi inteligența artificială. SafeWay aduce siguranța traficului la un cu totul alt nivel. Este foarte bine optimizat, riscurile fiind aproape de 0. Sistemul nu vă controlează vehiculul! În acest fel nu vor exista erori sau defecțiuni care vă vor pune viața dumneavoastră sau a celor din jur în pericol. Încrederea este un factor important care nu ar trebui să lipsească din această lume.</string>
    <string name="about_paragraph_2">Take part in the change the world needs!</string>
    <string name="about_paragraph_2_ro">Luați parte la schimbarea de care lumea are nevoie!</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_username_ro">Nume de utilizator</string>
    <string name="forgot_password_2">FORGOT PASSWORD</string>
    <string name="forgot_password_2_ro">AȚI UITAT PAROLA</string>
    <string name="important_tips_tricks"><![CDATA[Important tips & tricks]]></string>
    <string name="tip1">1. Never drive drunk! Even an over-the-counter cold medication can alter your response times, so assess yourself honestly before deciding to drive. The average drinker can only metabolize one drink per hour. One drink equates to 12 ounces of beer, or 5 ounces of wine, or 1.5 ounces of distilled spirits. If you are under the influence of any mind-altering substance, stay away from the wheel. Everyday 28 people die daily in the U.S. from drunk driving accidents.</string>
    <string name="tip2">2. Be extra careful near schools! Streets near schools often have reduced speed limits during school hours. Speed limit is 15 mph instead of 25 mph that are designated by signs with flashing lights. Though this limit may seem excessively low when you do not see any children, small kids can hide easily or make sudden movements.</string>
    <string name="tip3">3. If you are sleepy don’t drive! You want to reach your destination as soon as possible but if your eyes give emergency alert, do not insist driving. Just pull over your car and take a quick nap at least 20 minutes. Being late is better than being dead.</string>
    <string name="tip4">4. Always signal in advance! Confusion is the enemy of safe driving. Make your lane changes and turns predictable and smooth, and always signal in advance. “Nationwide, neglected or improper turn signals cause 2 million car accidents a year,” says Richard Ponziani, who conducted a recent study for the Society of Automotive Engineers. Failure to signal can invalidate your insurance claim after an accident, which means you will be financially responsible for any damage caused.</string>
    <string name="tip5">5. Monitor your blind spots! This is especially true of large vehicles, such as tractor-trailers. The rule of thumb for Defensive Driving is that if you can’t see the driver in the truck mirror, he can’t see you either. Accidents involving semi- trucks often prove fatal for the driver of a car.</string>
    <string name="tip6">6. Pack an emergency kit! Have a first-aid kit handy in case you find yourself or some other road user in an emergency situation. Also keep road flare, flashlight with a pair of fresh batteries, jumper cables, drinking water, and a phone charger in your vehicle in case you need to dial 911 or roadside assistance.</string>
    <string name="tip7">7. Don’t stare at oncoming lights! When driving at night your eyes get used to the dim glow of the dashboard and the road ahead which makes it easy to be disrupted by bright headlights. If you have to, shield your eyes with one palm or turn your gaze away from oncoming high beams. Suppose it’s a car behind you that’s the source of distraction, you can easily adjust your rear or side view mirror to get the reflection away from your eyes.</string>
    <string name="tip8">8. Take regular breaks! Long-distance driving has a way of eating away at your attentiveness, that’s why it is recommended to take regular breaks to refresh your mind more so if you’re driving at night you can make a stop every two hours and simply walk around the car a couple of times while sipping your coffee to wake your mind.</string>
    <string name="tip9">9. Pull over if you don’t feel like something is right! If you can barely make out the car ahead of you because of the rain, then you need to find a safe place – away from the road – and wait for the storm to subside. Better to arrive late than never.</string>
    <string name="tip10">10. Driving through water: Be very cautious where water has flooded onto the road. It is not advisable to drive through moving water if you cannot see the bottom of it. Slowly drive through the water, if it rises above the bottom of your doors, attempting to drive through could cause electrical damage and leave you with a heavy repair bill or worse, water might get into the engine forcing you to replace it.</string>
    <string name="tip11">11. Don’t use handheld devices while driving! It is illegal in most states using handheld devices while driving. Many modern cars have advanced Bluetooth systems that allow for hands free speech. You can adjust your car before hitting the road. Also don’t text while driving.</string>
</resources>